--- a/TouchEffect/TouchEffect.csproj
+++ b/TouchEffect/TouchEffect.csproj
@@ -7,4 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.637273" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Delegates\" />
+    <Folder Include="EventArgs\" />
+  </ItemGroup>
 </Project>
