--- a/TouchEffect.Droid/TouchEffect.Droid.csproj
+++ b/TouchEffect.Droid/TouchEffect.Droid.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TouchViewRenderer.cs" />
+    <Compile Include="PlatformTouchEff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
