--- a/TouchEffect.Droid/TouchEffect.Droid.csproj
+++ b/TouchEffect.Droid/TouchEffect.Droid.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TouchViewRenderer.cs" />
     <Compile Include="PlatformTouchEff.cs" />
+    <Compile Include="TouchEffectPreserver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
