--- a/TouchEffect.iOS/TouchEffect.iOS.csproj
+++ b/TouchEffect.iOS/TouchEffect.iOS.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TouchViewRenderer.cs" />
     <Compile Include="PlatformTouchEff.cs" />
+    <Compile Include="TouchEffectPreserver.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TouchEffect\TouchEffect.csproj">
