upd toggled sample for android

--- a/TouchEffectSample/TouchEffectSample.csproj
+++ b/TouchEffectSample/TouchEffectSample.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <Compile Remove="TouchFadeViewPage.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Issues\" />
+  </ItemGroup>
 </Project>
