--- a/TouchEffect.UWP/TouchEffect.UWP.csproj
+++ b/TouchEffect.UWP/TouchEffect.UWP.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="PlatformTouchEff.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TouchEffectPreserver.cs" />
     <EmbeddedResource Include="Properties\TouchEffect.UWP.rd.xml" />
   </ItemGroup>
   <ItemGroup>
