--- a/TouchEffect.Mac/TouchEffect.Mac.csproj
+++ b/TouchEffect.Mac/TouchEffect.Mac.csproj
@@ -46,6 +46,7 @@
     <XamMacArch></XamMacArch>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="netstandard" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Mac" />
