Add hover events (Android and UWP) and sample page

--- a/TouchEffectSample/TouchEffectSample.csproj
+++ b/TouchEffectSample/TouchEffectSample.csproj
@@ -16,4 +16,9 @@
   <ItemGroup>
     <Folder Include="Issues\" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="HoverPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
