--- a/TouchEffect/TouchEffect.csproj
+++ b/TouchEffect/TouchEffect.csproj
@@ -8,6 +8,9 @@
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Delegates\" />
+    <Folder Include="EventArgs\" />
+    <Folder Include="Enums\" />
     <Folder Include="Extensions\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
