Add ScrollPage sample

--- a/TouchEffectSample/TouchEffectSample.csproj
+++ b/TouchEffectSample/TouchEffectSample.csproj
@@ -20,5 +20,8 @@
     <EmbeddedResource Update="HoverPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ScrollPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
