add NativeAnimation properties to TouchEff.cs

--- a/TouchEffectSample/TouchEffectSample.csproj
+++ b/TouchEffectSample/TouchEffectSample.csproj
@@ -20,6 +20,9 @@
     <EmbeddedResource Update="HoverPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="NativeAnimationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ScrollPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
