--- a/TouchEffect.nuspec
+++ b/TouchEffect.nuspec
@@ -39,9 +39,11 @@
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.dll" target="lib\uap\TouchEffect.dll" />
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.pdb" target="lib\uap\TouchEffect.pdb" />
     <file src="TouchEffect.UWP\bin\Release\TouchEffect.UWP.dll" target="lib\uap\TouchEffect.UWP.dll" />
+        <file src="TouchEffect.UWP\bin\Release\TouchEffect.UWP.pdb" target="lib\uap\TouchEffect.UWP.pdb" />
     <!--Xamarin.Mac-->
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.dll" target="lib\Xamarin.Mac20\TouchEffect.dll" />
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.pdb" target="lib\Xamarin.Mac20\TouchEffect.pdb" />
     <file src="TouchEffect.Mac\bin\Release\TouchEffect.Mac.dll" target="lib\Xamarin.Mac20\TouchEffect.Mac.dll" />
+    <file src="TouchEffect.Mac\bin\Release\TouchEffect.Mac.pdb" target="lib\Xamarin.Mac20\TouchEffect.Mac.pdb" />
   </files>
 </package>
