--- a/TouchEffect.Mac/TouchEffect.Mac.csproj
+++ b/TouchEffect.Mac/TouchEffect.Mac.csproj
@@ -31,6 +31,7 @@
     <XamMacArch></XamMacArch>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>portable</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <DefineConstants></DefineConstants>
