--- a/TouchEffect.iOS/TouchEffect.iOS.csproj
+++ b/TouchEffect.iOS/TouchEffect.iOS.csproj
@@ -30,7 +30,7 @@
     <MtouchHttpClientHandler></MtouchHttpClientHandler>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>portable</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <DefineConstants></DefineConstants>
