--- a/TouchEffect.UWP/TouchEffect.UWP.csproj
+++ b/TouchEffect.UWP/TouchEffect.UWP.csproj
@@ -139,6 +139,9 @@
       <Name>TouchEffect</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
