--- a/TouchEffect.nuspec
+++ b/TouchEffect.nuspec
@@ -16,6 +16,9 @@
       <group>
           <dependency id="Xamarin.Forms" version="2.4" />
       </group>
+      <group targetFramework="tizen40">
+        <dependency id="Tizen.NET" version="4.0.0"/>
+      </group>
     </dependencies>
   </metadata>
   <files>
@@ -39,11 +42,16 @@
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.dll" target="lib\uap\TouchEffect.dll" />
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.pdb" target="lib\uap\TouchEffect.pdb" />
     <file src="TouchEffect.UWP\bin\Release\TouchEffect.UWP.dll" target="lib\uap\TouchEffect.UWP.dll" />
-        <file src="TouchEffect.UWP\bin\Release\TouchEffect.UWP.pdb" target="lib\uap\TouchEffect.UWP.pdb" />
+    <file src="TouchEffect.UWP\bin\Release\TouchEffect.UWP.pdb" target="lib\uap\TouchEffect.UWP.pdb" />
     <!--Xamarin.Mac-->
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.dll" target="lib\Xamarin.Mac20\TouchEffect.dll" />
     <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.pdb" target="lib\Xamarin.Mac20\TouchEffect.pdb" />
     <file src="TouchEffect.Mac\bin\Release\TouchEffect.Mac.dll" target="lib\Xamarin.Mac20\TouchEffect.Mac.dll" />
     <file src="TouchEffect.Mac\bin\Release\TouchEffect.Mac.pdb" target="lib\Xamarin.Mac20\TouchEffect.Mac.pdb" />
+    <!--Tizen-->
+    <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.dll" target="lib\tizen40\TouchEffect.dll" />
+    <file src="TouchEffect\bin\Release\netstandard2.0\TouchEffect.pdb" target="lib\tizen40\TouchEffect.pdb" />
+    <file src="TouchEffect.Tizen\bin\Release\TouchEffect.Tizen.dll" target="lib\tizen40\TouchEffect.Tizen.dll" />
+    <file src="TouchEffect.Tizen\bin\Release\TouchEffect.Tizen.pdb" target="lib\tizen40\TouchEffect.Tizen.pdb" />
   </files>
 </package>
